--- a/documentation/modules/ROOT/pages/multipleClusters.adoc
+++ b/documentation/modules/ROOT/pages/multipleClusters.adoc
@@ -4,4 +4,16 @@ include::_attributes.adoc[]
 
 include::main@vp-workshop:ROOT:partial$topicHeader.adoc[]
 
-[#website]
+* Why manage multiple clusters
+* {rhacm} Basics
+* Managed Cluster Groups
+* Other Considerations
+
+[#why]
+=== Why manage multiple clusters
+
+=== Kubernetes adoption leads to multicluster
+[.INFORMATION]
+====
+“As Kubernetes gains adoption across the industry, scenarios are arising in which I&O teams are finding they must deploy and manage multiple clusters, either in a single region on-premises or in the cloud, or across multiple regions….for a number of reasons, including multi-tenancy, disaster recovery, and with hybrid, multicloud, or edge deployments.”
+====
