--- a/documentation/modules/ROOT/pages/creatingPatterns.adoc
+++ b/documentation/modules/ROOT/pages/creatingPatterns.adoc
@@ -77,8 +77,170 @@ common
 
 image::create-where2start.png[]
 
-One of the first things we should do before embarking on creating a pattern is to identify a problem to solve. This can come from an existing customer problem or an idea on how we can showcase some of our Red Hat products working together. You can use one of our simplest validated patterns, multicloud gitops, as a starting point by using the template to create a new Git repository in your local GitHub account.  You might already have an existing demo that you can use and convert it to use the Validated Pattern framework.
+One of the first things we should do before embarking on creating a pattern is to identify a problem to solve.
+This can come from an existing customer problem or an idea on how we can showcase some of our Red Hat products working together.
+You can use one of our simplest validated patterns, multicloud gitops, as a starting point by using the template to create a new Git repository in your local GitHub account.
+You might already have an existing demo that you can use and convert it to use the Validated Pattern framework.
 
-The next step is to identify the technology components that you will need.  In the case of an existing demo you might already know which components are part of the pattern. 
+The next step is to identify the technology components that you will need. 
+In the case of an existing demo you might already know which components are part of the pattern. 
 
 The final step is to ensure that the configuration of those components, and the integration points, are handled in the pattern.  
+
+
+=== Setting up naming
+
+Naming and a quick convention
+
+
+
+== Adding to the Bill of materials
+
+=== Introducing new operators
+
+
+[source,yaml]
+====
+  subscriptions:
+    acm:
+      name: advanced-cluster-management
+      namespace: open-cluster-management
+      channel: release-2.9
+
+    s3:
+      name: ack-s3-controller
+      namespace: ack-system
+      channel: alpha
+      source: community-operators
+    cte:
+      name: cte-k8s-operator
+      namespace: openshift-operators
+      channel: stable
+      source: certified-operators
+====
+
+Operator creation screengrab
+
+Operator URL parsing
+
+Get the operators via the cli
+
+
+=== Introducing new helm charts
+
+Directories don't matter - it's just convention
+
+====
+
+====
+
+
+Copy and paste is your best start with MCG.
+
+
+
+
+=== Chaining configuration into the charts.
+
+One key element of validated patterns is a structured set of variable overrides. 
+These overrides are key to allowing the template to be kept as 'DRY' as possible when configuring.
+For this context it's important to understand the evaluation order:
+
+1. The default values defined in the chart (or sub charts).
+2. `values-global.yaml` file
+3. Values within clusterGroup files (e.g. `values-hub.yaml)
+4. Values override files with precedence for the (top/bottom) of the valid list
+5. Values overrides shown in individual application definitions
+
+
+
+*Default files installed in a chart*
+
+All helm charts *MUST* contain a `values.yaml` file.
+Values that are defined here should be considered the 'base' consideration.
+While it's possible to not define a value here, yet use it in the chart, it is strongly recommended sensible defaults are included.
+
+
+* `values-global.yaml` file*
+
+Values here are applied to every argocd application as it is picked up directly by the validated patterns operator.
+The values here are also usable in the `clusterGroup` files
+
+
+** ClusterGroup** files overrides
+
+Values can directly be used within the context of files such as `values-hub.yaml` 
+
+[source,yaml]
+====
+# Override values defined at the `clusterGroup` level
+letsencrypt:
+  region: ''
+  server: https://acme-v02.api.letsencrypt.org/directory
+  # staging URL
+  # server: https://acme-staging-v02.api.letsencrypt.org/directory
+  email: chris@thebutlers.me
+
+clusterGroup:
+  name: hub
+  isHubCluster: true
+  ...
+===
+
+
+*Values override files*
+
+`clusterGroup`s define an override file list which is evaluated in order.
+The cluster overrides files can take of the variables defined in `values-global.yaml` as well as metadata assembled by the operator, OpenShift and {rhacm}.
+
+These dynamic variables allow abstraction from variability between OpenShift installation. `storageClasses` varying across `clusterPlatform` is a clear example.
+
+The order of operations can be changed based on uses requirements easily with the list.
+[source,yaml]
+====
+overrides:
+  - '/overrides/values-{{ $.Values.global.clusterPlatform }}.yaml'
+  - '/overrides/values-{{ $.Values.global.clusterPlatform }}-{{ $.Values.global.clusterVersion }}.yaml'
+  - '/overrides/values-{{ $.Values.global.clusterPlatform }}-{{ $.Values.clusterGroup.name }}.yaml'
+  - '/overrides/values-{{ $.Values.global.clusterVersion }}-{{ $.Values.clusterGroup.name }}.yaml"
+====
+
+*Discovery activity*: Logging into console for the `cluster` OpenShift gitops.
+Examine the root application to discover what variables have been provided to ArgoCD.
+
+
+*Individual application overrides*
+
+Individual applications should be reserved for use-cases where there is risk of conflict across multiple charts in the same application group.
+They should be viewed as absolutely hard coded into the pattern.
+
+
+[source,yaml]
+====
+applications:
+  coffeeshop-test:
+    name: quarkuscoffeeshop-demo
+    namespace: quarkuscoffeeshop-demo
+    project: quarkuscoffeeshop-demo
+    path: charts/store/quarkuscoffeeshop-charts
+    overrides:
+    - name: ocp_auth.bind_dn
+      value: "uid=ldap_admin\\,cn=users\\,cn=accounts\\,dc=redhatlabs\\,dc=dev"
+    - name: ocp_auth.bind_password
+      value: "supersecret"
+
+
+====
+
+
+
+
+
+
+[source,yaml]
+====
+# Best practice lines up naming here
+global:
+====
+
+
