Add another secret example

--- a/documentation/modules/ROOT/pages/secrets-loading.adoc
+++ b/documentation/modules/ROOT/pages/secrets-loading.adoc
@@ -59,6 +59,7 @@ secrets:
 * The validatedPatternDefaultPolicy is a default password policy that is guaranteed to exist
 * It is defined link:https://github.com/hybrid-cloud-patterns/common/blob/main/ansible/plugins/module_utils/load_secrets_v2.py#L28[here]
 * The secret is 20 character longs (min 1 lowercase, min 1 uppercase, min 1 number, min 1 special char)
+* It is possible to create a custom policy and use that one to generate secrets randomly
 
 ====
 
@@ -106,7 +107,33 @@ secrets:
       ini_key: aws_access_key_id
     - name: aws_secret_access_key
       ini_file: ~/.aws/credentials
+      ini_section: default
       ini_key: aws_secret_access_key
 ----
 
-This reads ~/.aws/credentials and uses the ‘[default]’ section to look for the aws_access_key_id and aws_secret_access_key in the file
+This reads `~/.aws/credentials` and uses the `[default]` section to look for the `aws_access_key_id` and `aws_secret_access_key` in the file
+
+[#custompolicy]
+[source,yaml]
+----
+version: "2.0"
+vaultPolicies:
+  basicPolicy: |
+    length=10
+    rule "charset" { charset = "abcdefghijklmnopqrstuvwxyz" min-chars = 1 }
+    rule "charset" { charset = "ABCDEFGHIJKLMNOPQRSTUVWXYZ" min-chars = 1 }
+    rule "charset" { charset = "0123456789" min-chars = 1 }
+secrets:
+  - name: config-demo
+    vaultPrefixes:
+    - region-one
+    fields:
+    - name: secret
+      onMissingValue: generate # One of: error,generate,prompt (generate is only valid for normal secrets)
+      # This override attribute is false by default. The attribute is only valid with 'generate'. If the secret already exists in the
+      # vault it won't be changed unless override is set to true
+      override: true
+      vaultPolicy: basicPolicy
+----
+
+This will use the `basicPolicy` to generate a random value as an attribute called `secret` in the `secret/region-one/config-demo` vault path
