--- a/documentation/modules/ROOT/pages/secrets.adoc
+++ b/documentation/modules/ROOT/pages/secrets.adoc
@@ -16,7 +16,7 @@ include::main@vp-workshop:ROOT:partial$topicHeader.adoc[]
 == Secrets Management vs. GitOps
 
 * GitOps’ entire premise is to use Git as the source of truth for infrastructure and application configuration
-* Automation is in place (ArgoCD) to translate Git’s source of truth into infrastructure applications inside OpenShift
+* Automation is in place (ArgoCD) to translate Git's source of truth into infrastructure applications inside OpenShift
 * Storing confidential data (passwords, private keys, secrets, authentication tokens, …) in Git is fundamentally a security vulnerability and should be avoided (even if the Git repository is private and access control is in place)
 * Once confidential data is out in clear-text (or in some reversible form), it has to be considered as compromised
 
