--- a/documentation/modules/ROOT/pages/clusterDomains.adoc
+++ b/documentation/modules/ROOT/pages/clusterDomains.adoc
@@ -12,7 +12,7 @@ include::main@vp-workshop:ROOT:partial$topicHeader.adoc[]
 
 By default ArgoCD does not expose any means to know the cluster's name/FQDN (Fully Qualified Domain Name)
 
-To make up for this the framework collects some cluster information in order to provide resuable parameters for cluster specific values.
+To make up for this the framework collects some cluster information in order to provide reusable parameters for cluster specific values.
 
 [#variables]
 === Domain variables set by the pattern
