--- a/documentation/modules/ROOT/pages/creatingPatterns.adoc
+++ b/documentation/modules/ROOT/pages/creatingPatterns.adoc
@@ -20,6 +20,7 @@ include::main@vp-workshop:ROOT:partial$topicHeader.adoc[]
 == Understanding common
 
 What's the role of the **common** repository?
+
 * The core components that make up the Validated Patterns framework are contained in the common repository
 * Including:
 ** OpenShift GitOps configurations
@@ -71,6 +72,10 @@ common
 * We are in the very early stages of moving the helm charts in common into a public Helm repository
 * Deploying our patterns with multi-source enabled which allows us to use multiple sources for values, which will help reduce the need to have all the charts in the repo
 * Continue to maintain Makefiles, Ansible scripts and other tools in this repo in support of deploying patterns
+
+You may be wondering - **why**? 
+
+We want to maximize modularity in the framework. This will reduce our reliance on the common repository as it is today and will decrease the footprint and complexity of the patterns. 
 
 [#Creation Process]
 == Creation Process
