--- a/documentation/modules/ROOT/pages/multipleClusters.adoc
+++ b/documentation/modules/ROOT/pages/multipleClusters.adoc
@@ -17,3 +17,26 @@ include::main@vp-workshop:ROOT:partial$topicHeader.adoc[]
 ====
 “As Kubernetes gains adoption across the industry, scenarios are arising in which I&O teams are finding they must deploy and manage multiple clusters, either in a single region on-premises or in the cloud, or across multiple regions….for a number of reasons, including multi-tenancy, disaster recovery, and with hybrid, multicloud, or edge deployments.”
 ====
+
+[#challenges]
+=== Multi-Cluster Challenges
+
+image::multicluster-challenges.png[]
+
+* This increase of clusters presents challenges to organizations responsible for managing these clusters.
+* The infrastructure/operations teams that are responsible for ensuring the deployment, configuration and management of these clusters will need the proper tools.
+* The DevOps teams will need clusters to develop their applications and will have increasing requests for more resources and consistency across clusters. 
+* The Organization as a whole will need to have multiple target environments in which to deploy clusters.  
+* In high volume scenarios the clusters might need to be created in cloud providers depending on cost and resource availability.  
+* This presents a challenge where a central management tool is needed to ensure that operators can deploy, maintain and manage resources. 
+
+
+[#options]
+=== Multi-Cluster Management Options
+
+* You can do it manually using custom scripts
+** This presents many challenges  as scripts are homegrown and maintainability can become an issue.
+* You can use ArgoCD to a degree
+** ArgoCD’s forte is to declaratively deploy applications onto a Kubernetes cluster not manage clusters.  
+* Use {rhacm} which is built to manage multiple clusters
+
