--- a/documentation/modules/ROOT/pages/creatingPatterns.adoc
+++ b/documentation/modules/ROOT/pages/creatingPatterns.adoc
@@ -88,16 +88,33 @@ In the case of an existing demo you might already know which components are part
 The final step is to ensure that the configuration of those components, and the integration points, are handled in the pattern.  
 
 
-=== Setting up naming
+== Setting up naming
 
-Naming and a quick convention
+There are two names that exist a pattern: The `pattern` name  and the `clusterGroup` name.
+Best practice is to align `pattern` with the repository title as it drives file naming for secrets file: `values-secrets-{pattern}.yaml`
 
+clusterGroup is most relevant when you have multiple clusters. Otherwise you can rely on the default `hub` group.
 
+[source,yaml]
+====
+  global:
+    pattern: multicloud-gitops
+    options:
+      useCSV: false
+      syncPolicy: Automatic
+      installPlanApproval: Automatic
+  main:
+    clusterGroupName: hub
+====
 
 == Adding to the Bill of materials
 
-=== Introducing new operators
+There are three major resources you can add: Operators, Applications (helm charts) and ansible (imperative) scripts.
 
+
+== Introducing new operators
+
+Operators can be simply added to the clusterGroup as subscriptions
 
 [source,yaml]
 ====
@@ -106,7 +123,6 @@ Naming and a quick convention
       name: advanced-cluster-management
       namespace: open-cluster-management
       channel: release-2.9
-
     s3:
       name: ack-s3-controller
       namespace: ack-system
@@ -119,28 +135,21 @@ Naming and a quick convention
       source: certified-operators
 ====
 
-Operator creation screengrab
+To find the *correct* names the easiest way to do this is to jump into the console, find the operator, get to the install screen
 
-Operator URL parsing
+image::operator-install.png[]
 
-Get the operators via the cli
-
-
-=== Introducing new helm charts
-
-Directories don't matter - it's just convention
-
-====
-
-====
+The URL at this point can be used to pull out the name (pkg), catalog, channel etc.
 
 
-Copy and paste is your best start with MCG.
+== Introducing new helm charts
+
+The easiest way to start with new helm charts is to copy and paste from the example charts in multicloud-gitops.
 
 
 
 
-=== Chaining configuration into the charts.
+== Chaining configuration into the charts.
 
 One key element of validated patterns is a structured set of variable overrides. 
 These overrides are key to allowing the template to be kept as 'DRY' as possible when configuring.
@@ -161,31 +170,29 @@ Values that are defined here should be considered the 'base' consideration.
 While it's possible to not define a value here, yet use it in the chart, it is strongly recommended sensible defaults are included.
 
 
-* `values-global.yaml` file*
+*`values-global.yaml` file*
 
 Values here are applied to every argocd application as it is picked up directly by the validated patterns operator.
 The values here are also usable in the `clusterGroup` files
 
 
-** ClusterGroup** files overrides
+*ClusterGroup* files overrides
 
 Values can directly be used within the context of files such as `values-hub.yaml` 
 
 [source,yaml]
 ====
-# Override values defined at the `clusterGroup` level
-letsencrypt:
-  region: ''
-  server: https://acme-v02.api.letsencrypt.org/directory
-  # staging URL
-  # server: https://acme-staging-v02.api.letsencrypt.org/directory
-  email: chris@thebutlers.me
+  letsencrypt:
+    region: ''
+    server: https://acme-v02.api.letsencrypt.org/directory
+    # staging URL
+    # server: https://acme-staging-v02.api.letsencrypt.org/directory
+    email: chris@thebutlers.me
+  clusterGroup:
+    name: hub
+    isHubCluster: true
 
-clusterGroup:
-  name: hub
-  isHubCluster: true
-  ...
-===
+====
 
 
 *Values override files*
@@ -196,13 +203,14 @@ The cluster overrides files can take of the variables defined in `values-global.
 These dynamic variables allow abstraction from variability between OpenShift installation. `storageClasses` varying across `clusterPlatform` is a clear example.
 
 The order of operations can be changed based on uses requirements easily with the list.
+
 [source,yaml]
 ====
-overrides:
-  - '/overrides/values-{{ $.Values.global.clusterPlatform }}.yaml'
-  - '/overrides/values-{{ $.Values.global.clusterPlatform }}-{{ $.Values.global.clusterVersion }}.yaml'
-  - '/overrides/values-{{ $.Values.global.clusterPlatform }}-{{ $.Values.clusterGroup.name }}.yaml'
-  - '/overrides/values-{{ $.Values.global.clusterVersion }}-{{ $.Values.clusterGroup.name }}.yaml"
+  overrides:
+    - '/overrides/values-{{ $.Values.global.clusterPlatform }}.yaml'
+    - '/overrides/values-{{ $.Values.global.clusterPlatform }}-{{ $.Values.global.clusterVersion }}.yaml'
+    - '/overrides/values-{{ $.Values.global.clusterPlatform }}-{{ $.Values.clusterGroup.name }}.yaml'
+    - '/overrides/values-{{ $.Values.global.clusterVersion }}-{{ $.Values.clusterGroup.name }}.yaml"
 ====
 
 *Discovery activity*: Logging into console for the `cluster` OpenShift gitops.
@@ -217,30 +225,20 @@ They should be viewed as absolutely hard coded into the pattern.
 
 [source,yaml]
 ====
-applications:
-  coffeeshop-test:
-    name: quarkuscoffeeshop-demo
-    namespace: quarkuscoffeeshop-demo
-    project: quarkuscoffeeshop-demo
-    path: charts/store/quarkuscoffeeshop-charts
-    overrides:
-    - name: ocp_auth.bind_dn
-      value: "uid=ldap_admin\\,cn=users\\,cn=accounts\\,dc=redhatlabs\\,dc=dev"
-    - name: ocp_auth.bind_password
-      value: "supersecret"
-
-
+  applications:
+    coffeeshop-test:
+      name: quarkuscoffeeshop-demo
+      namespace: quarkuscoffeeshop-demo
+      project: quarkuscoffeeshop-demo
+      path: charts/store/quarkuscoffeeshop-charts
+      overrides:
+      - name: ocp_auth.bind_dn
+        value: "uid=ldap_admin\\,cn=users\\,cn=accounts\\,dc=redhatlabs\\,dc=dev"
+      - name: ocp_auth.bind_password
+        value: "supersecret"
 ====
 
 
 
-
-
-
-[source,yaml]
-====
-# Best practice lines up naming here
-global:
-====
 
 
