updated multipleclusters doc

--- a/documentation/modules/ROOT/nav.adoc
+++ b/documentation/modules/ROOT/nav.adoc
@@ -102,6 +102,8 @@
 ** xref:multipleClusters.adoc#objectives[Topic Objectives]
 ** xref:multipleClusters.adoc#why[Why manage multiple clusters]
 ** xref:multipleClusters.adoc#challenges[Multi-Cluster Challenges]
+** xref:multipleClusters.adoc#rhacm[Red Hat Advanced Cluster Management for Kubernetes]
+
 
 //Appendix - Additional Resources
 * xref:additionalTopics.adoc[10. Additional Resources]
