updated broken link

--- a/documentation/modules/ROOT/pages/patternsDemo.adoc
+++ b/documentation/modules/ROOT/pages/patternsDemo.adoc
@@ -1,7 +1,7 @@
 include::_attributes.adoc[]
 
 [#demo]
-The following demonstration is of the link:https://validatedpatterns/patterns/medical-diagnosis[medical-diagnosis] pattern. 
+The following demonstration is of the link:https://validatedpatterns.io/patterns/medical-diagnosis[medical-diagnosis] pattern. 
 
 
 
