Minor TOC fixes
Fixes some non-existent references in TOC

--- a/documentation/modules/ROOT/nav.adoc
+++ b/documentation/modules/ROOT/nav.adoc
@@ -62,22 +62,20 @@
 ** xref:pattern-secrets-management.adoc#approaches[Approaches]
 *** xref:pattern-secrets-management.adoc#encryptedSecrets[Encrypted Secrets]
 *** xref:pattern-secrets-management.adoc#secretReferences[References to Secrets]
-** xref:pattern-secrets-management.adoc#vault[Vault]
-** xref:pattern-secrets-management.adoc#eso[ESO]
 ** xref:pattern-secrets-management.adoc#vaultconcepts[Vault Concepts]
 ** xref:pattern-secrets-management.adoc#esoconcepts[ESO Concepts]
 ** xref:secrets-loading.adoc#secretLoading[Secrets Loading]
 //** xref:secrets-loading.adoc#valuesecret[Secrets Template in the Patterns]
-** xref:secrets-loading.adoc#policy[Default Password Policy]
-** xref:secrets-loading.adoc#secretExamples[Secret Template Examples]
-*** xref:secrets-loading.adoc#certificate[Loading a Certificate]
-*** xref:secrets-loading.adoc#awscreds[Loading AWS Credentials]
+//** xref:secrets-loading.adoc#policy[Default Password Policy] (NON-EXISTENT)
+** xref:secrets-loading.adoc[Secrets Loading]
+*** xref:secrets-loading.adoc#valuesecret[Secrets Template in the Patterns]
+*** xref:secrets-loading.adoc#secretexamples[Secret Examples]
 //** xref:secrets.adoc[Exercises]
 
 //Chapter 7 - SelfContained Pattern Resources
 * xref:selfContained.adoc[7. Self Contained Patterns]
 ** xref:selfContained.adoc#objectives[Topic Objectives]
-** xref:selfContained.adoc#contained[Self Contained?]
+//** xref:selfContained.adoc#contained[Self Contained?] (NON-EXISTENT)
 ** xref:selfContained.adoc#thoughts[Additional Thoughts]
 //** xref:selfContained.adoc[Exercises]
 
@@ -86,7 +84,7 @@
 ** xref:gitopsRoughEdges.adoc#objectives[Topic Objectives]
 ** xref:gitopsRoughEdges.adoc#declarativeSync[Declarative Synchronization]
 ** xref:gitopsRoughEdges.adoc#imperative[Imperative Actions]
-*** xref:gitopsRoughEdges.adoc#jobs[Kubernetes Batch API]
+//*** xref:gitopsRoughEdges.adoc#jobs[Kubernetes Batch API] (NON-EXISTENT)
 *** xref:gitopsRoughEdges.adoc#jobs[Kubernetes Jobs]
 *** xref:gitopsRoughEdges.adoc#cron[Kubernetes cronJobs]
 ** xref:gitops-roughedges-syncwave-hooks.adoc[Sync Waves and Hooks]
