--- a/documentation/modules/ROOT/nav.adoc
+++ b/documentation/modules/ROOT/nav.adoc
@@ -20,11 +20,11 @@
 *** xref:partners.adoc#intel[Intel]
 **** xref:partners.adoc#intel-mcgo[Intel MultiCloud GitOps]
 **** xref:partners.adoc#intel-md[Intel Medical Diagnosis]
-*** xref:partners.adoc[Portworx]
+*** xref:partners.adoc#pwx-mcgo[Portworx]
 **** xref:partners.adoc#pwx-mcgo[Portworx]
-*** xref:partners.adoc[Cisco]
+*** xref:partners.adoc#cisco-pwx-mcgo[Cisco]
 **** xref:partners.adoc#cisco-pwx-mcgo[Cisco]
-*** xref:partners.adoc[Veeam/Kasten]
+*** xref:partners.adoc#veeam-mcgo[Veeam/Kasten]
 **** xref:partners.adoc#veeam-mcgo[Veeam/Kasten]
 
 // Chapter 4 - Pattern Maintenance Tiers
@@ -61,22 +61,20 @@
 ** xref:pattern-secrets-management.adoc#approaches[Approaches]
 *** xref:pattern-secrets-management.adoc#encryptedSecrets[Encrypted Secrets]
 *** xref:pattern-secrets-management.adoc#secretReferences[References to Secrets]
-** xref:pattern-secrets-management.adoc#vault[Vault]
-** xref:pattern-secrets-management.adoc#eso[ESO]
 ** xref:pattern-secrets-management.adoc#vaultconcepts[Vault Concepts]
 ** xref:pattern-secrets-management.adoc#esoconcepts[ESO Concepts]
 ** xref:secrets-loading.adoc#secretLoading[Secrets Loading]
 //** xref:secrets-loading.adoc#valuesecret[Secrets Template in the Patterns]
-** xref:secrets-loading.adoc#policy[Default Password Policy]
-** xref:secrets-loading.adoc#secretExamples[Secret Template Examples]
-*** xref:secrets-loading.adoc#certificate[Loading a Certificate]
-*** xref:secrets-loading.adoc#awscreds[Loading AWS Credentials]
+//** xref:secrets-loading.adoc#policy[Default Password Policy] (NON-EXISTENT)
+** xref:secrets-loading.adoc[Secrets Loading]
+*** xref:secrets-loading.adoc#valuesecret[Secrets Template in the Patterns]
+*** xref:secrets-loading.adoc#secretexamples[Secret Examples]
 //** xref:secrets.adoc[Exercises]
 
 //Chapter 7 - SelfContained Pattern Resources
 * xref:selfContained.adoc[7. Self Contained Patterns]
 ** xref:selfContained.adoc#objectives[Topic Objectives]
-** xref:selfContained.adoc#contained[Self Contained?]
+//** xref:selfContained.adoc#contained[Self Contained?] (NON-EXISTENT)
 ** xref:selfContained.adoc#thoughts[Additional Thoughts]
 //** xref:selfContained.adoc[Exercises]
 
@@ -85,7 +83,7 @@
 ** xref:gitopsRoughEdges.adoc#objectives[Topic Objectives]
 ** xref:gitopsRoughEdges.adoc#declarativeSync[Declarative Synchronization]
 ** xref:gitopsRoughEdges.adoc#imperative[Imperative Actions]
-*** xref:gitopsRoughEdges.adoc#jobs[Kubernetes Batch API]
+//*** xref:gitopsRoughEdges.adoc#jobs[Kubernetes Batch API] (NON-EXISTENT)
 *** xref:gitopsRoughEdges.adoc#jobs[Kubernetes Jobs]
 *** xref:gitopsRoughEdges.adoc#cron[Kubernetes cronJobs]
 ** xref:gitops-roughedges-syncwave-hooks.adoc[Sync Waves and Hooks]
